// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameAndCopy should show link info component including a copy-to-clipboard button 1`] = `
<div class="oc-mb-s oc-width-1-1">
  <h4 class="oc-text-truncate oc-text-normal oc-files-file-link-name oc-m-rm">Example link</h4>
  <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1 oc-p-xs link-name-container">
    <div class="oc-flex oc-flex-middle oc-text-truncate">
      <span class="oc-icon oc-icon-m oc-icon-passive"><!----></span>
      <p class="oc-files-file-link-url oc-ml-s oc-text-truncate oc-my-rm">https://some-url.com/abc</p>
    </div>
    <button aria-label="Copy link to clipboard" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline oc-files-public-link-copy-url oc-ml-xs" type="button">
      <!--v-if-->
      <!-- @slot Content of the button --> Copy
    </button>
  </div>
</div>
`;

exports[`NameAndCopy upon clicking it should copy the private link to the clipboard button, render a success message and change icon for half a second 1`] = `
<div class="oc-mb-s oc-width-1-1">
  <h4 class="oc-text-truncate oc-text-normal oc-files-file-link-name oc-m-rm">Example link</h4>
  <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1 oc-p-xs link-name-container">
    <div class="oc-flex oc-flex-middle oc-text-truncate">
      <span class="oc-icon oc-icon-m oc-icon-success"><!----></span>
      <p class="oc-files-file-link-url url-copied oc-ml-s oc-my-rm">Copied</p>
    </div>
    <button aria-label="Copy link to clipboard" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline oc-files-public-link-copy-url oc-ml-xs" type="button">
      <!--v-if-->
      <!-- @slot Content of the button --> Copy
    </button>
  </div>
</div>
`;

exports[`NameAndCopy upon clicking it should copy the private link to the clipboard button, render a success message and change icon for half a second 2`] = `
<div class="oc-mb-s oc-width-1-1">
  <h4 class="oc-text-truncate oc-text-normal oc-files-file-link-name oc-m-rm">Example link</h4>
  <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1 oc-p-xs link-name-container">
    <div class="oc-flex oc-flex-middle oc-text-truncate">
      <span class="oc-icon oc-icon-m oc-icon-passive"><!----></span>
      <p class="oc-files-file-link-url oc-ml-s oc-text-truncate oc-my-rm">https://some-url.com/abc</p>
    </div>
    <button aria-label="Copy link to clipboard" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline oc-files-public-link-copy-url oc-ml-xs" type="button">
      <!--v-if-->
      <!-- @slot Content of the button --> Copy
    </button>
  </div>
</div>
`;
